Dark Mode Button Correction

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -81,24 +81,20 @@ label[for=darkmode-toggle]{
     display: block;
     background: #ebebeb;
     border-radius: 20px;
-    box-shadow: inset 0px 1px rgba(0,0,0,0.4), inset 0px 1px rgba(255, 255, 255, 0.4);
+    box-shadow: inset 0px 1px 2px rgba(0,0,0,0.4), inset 0px -1px  2px rgba(255, 255, 255, 0.4);
     cursor: pointer;
     transition: 0.3s;
 }
 
 label[for=darkmode-toggle]:after{
     content: "";
-    width: 18px;
-    height: 18px;
+    width: 16px;
+    height: 16px;
     position: absolute;
-    top: 1px;
-    left: 1px;
+    top: 2px;
+    left: 2px;
     background: linear-gradient(180deg, #ffcc89, #d8860b);
-    border-radius: 18px;
-    box-shadow: 0px 1px rgba(0,0,0,0.2);
+    border-radius: 16px;
+    box-shadow: 0px 1px 2px rgba(0,0,0,0.2);
     transition: 0.3s;
 }
-
-/*label[for=darkmode-toggle]:active:after{*/
-/*    width: 26px;*/
-/*}*/
